<resources>
    <string name="app_name">Honeycomb</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="enter_new_name">Enter new name</string>

    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="chart">Chart</string>
    <string name="charts">Charts</string>
    <string name="map">Map</string>
    <string name="hives">Hives</string>
    <string name="about">About</string>
    <string name="todo_list">Todo list</string>
    <string name="scan_label">Scan label</string>

    <string name="revision">Revision</string>
    <string name="strength">Strength</string>
    <string name="frames_installed">Frames installed:</string>

    <string name="date">Date</string>
    <string name="frames">Frames</string>
    <string name="note">Note</string>
    <string name="latitude">Latitude: %s° N</string>
    <string name="longitude">Longitude: %s° E</string>

    <string name="new_revision">New Revision</string>
    <string name="bee_queen">Bee Queen</string>
    <string name="name">Name</string>
    <string name="add_label">Add Label</string>
    <string name="replace_label">Replace Label</string>
    <string name="hives_count">Hives count: %d</string>
    <string name="of">of</string>
    <string name="size_mm">Size(mm):</string>
    <string name="str">Str</string>

    <string name="frames_rev_recycler">%s of %s Size: %smm</string>
    <string name="percents">%d%%</string>

    <string name="units">Units</string>
    <string name="night_mode">Night mode</string>
    <string name="language">Language</string>
    <string name="night_mode_disabled">Night mode disabled</string>
    <string name="night_mode_enabled">Night mode enabled</string>
    <string name="change_name_breed">Change name/breed</string>
    <string name="set_defaul_image">Set defaul image</string>
    <string name="delete_this_hive">Delete this hive</string>
    <string name="general">General</string>
    <string name="enter_new_breed">Enter new breed</string>
    <string name="bee_queens">Bee Queens</string>
    <string name="bulletin_board">Bulletin board</string>
    <string name="select_apiary">Select apiary</string>
    <string name="add_notification">Add notification</string>
</resources>
