<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.lifecycle.LiveData" />
        <variable
            name="vm"
            type="com.example.beehives.viewModels.AboutHiveViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".view.fragments.AboutHiveFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/popUpBtn"
                style="@style/ButtonHexagone"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="56dp"
                android:background="#00000000"
                app:iconTint="@color/primaryTextColor"
                app:icon="@drawable/baseline_more_vert_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadPhoto="@{vm.hive.photo}"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/accentColor"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add_photo"
                android:layout_width="41.5dp"
                android:layout_height="48dp"
                android:background="@drawable/hexagone"
                android:padding="8dp"
                android:tooltipText="Select photo for hive"
                app:icon="@drawable/baseline_add_a_photo_24"
                app:iconTint="@color/primaryDarkColor"
                app:layout_constraintBottom_toTopOf="@+id/name"
                app:layout_constraintEnd_toEndOf="@+id/imageView" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.hive.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintEnd_toStartOf="@+id/button_charts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{vm.hive.breed}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/button_charts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addLabelButton"
                style="@style/ButtonHexagone"
                android:layout_marginStart="44dp"
                android:layout_marginTop="73dp"
                android:clickable="true"
                android:focusable="true"
                android:tooltipText="@{vm.hive.label==null? @string/add_label : @string/replace_label }"
                app:icon="@drawable/round_qr_code_scanner_24"
                app:iconTint="@color/primaryDarkColor"
                app:layout_constraintStart_toStartOf="@+id/button_add_photo"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_bee_queen"
                style="@style/ButtonHexagone"
                android:focusable="true"
                android:tooltipText="@string/bee_queen"
                android:translationX="-42dp"
                android:translationY="-22dp"
                app:icon="@mipmap/bee"
                app:layout_constraintStart_toEndOf="@+id/addLabelButton"
                app:layout_constraintTop_toBottomOf="@+id/addLabelButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_charts"
                style="@style/ButtonHexagone"
                android:tooltipText="@string/chart"
                android:translationX="-45dp"
                android:translationY="-122dp"
                app:icon="@drawable/round_insights_24"
                app:layout_constraintEnd_toStartOf="@+id/button_bee_queen"
                app:layout_constraintTop_toBottomOf="@+id/button_bee_queen" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_new_revision"
                style="@style/ButtonHexagone"
                android:tooltipText="@string/new_revision"
                android:translationY="-144dp"
                app:backgroundTint="@color/primaryTextColor"
                app:icon="@drawable/baseline_add_24"
                app:layout_constraintStart_toStartOf="@+id/button_charts"
                app:layout_constraintTop_toBottomOf="@+id/button_charts" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/revisionsRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_charts"
                tools:listitem="@layout/item_for_revisions_recycler" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>