<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.beehives.viewModels.RevisionViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        tools:context=".view.fragments.AddRevisionFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true">

            <TextView
                android:id="@+id/revisionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/revision"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/selectDate"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="8dp"
                android:text="@{vm.getDateStr()}"
                android:background="@drawable/button_circle"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/revisionTextView" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/selectDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/round_calendar_today_24"
                app:layout_constraintBottom_toBottomOf="@+id/selectDate"
                app:layout_constraintEnd_toEndOf="@+id/selectDate"
                app:layout_constraintTop_toTopOf="@+id/selectDate" />

            <!--————————————————————————————— Strength ——————————————————————————————————————————-->

            <TextView
                android:id="@+id/strengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/strength"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selectDate" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/strengthTextView">

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="85"
                    android:indeterminate="false"
                    android:progress="@{vm.lastRevision.strength==null? 60 : vm.lastRevision.strength}"
                    android:thumbTint="@color/primaryColor" />

                <TextView
                    android:id="@+id/percents"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:gravity="center|start"
                    android:text="@{vm.lastRevision.strength == null? vm.defStr : vm.lastRevision.strength.toString()+'%'}"
                    android:textSize="16sp" />

            </LinearLayout>

            <!--————————————————————————————— Frames installed editText —————————————————————————-->
            <TextView
                android:id="@+id/framesInstalledTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/frames_installed"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <LinearLayout
                android:id="@+id/rootLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/framesInstalledTextView">
            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonAddFrameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:src="@drawable/round_add_circle_24"
                android:backgroundTint="@color/primaryColor"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonDelFrameField"
                app:layout_constraintTop_toBottomOf="@+id/rootLinear" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonDelFrameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:src="@drawable/round_remove_circle_24"
                android:backgroundTint="@color/primaryColor"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/buttonAddFrameField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rootLinear" />


            <!--————————————————————————————————————————— Note ——————————————————————————————————————————————-->

            <TextView
                android:id="@+id/noteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/note"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonAddFrameField" />

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/frame_for_note"
                android:gravity="top"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"

                android:inputType="textMultiLine|text"
                android:minHeight="256dp"
                android:padding="10dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteTextView" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/baseline_save_24"
                android:tint="@color/common_google_signin_btn_text_light"
                app:backgroundTint="@color/primaryColor"
                app:layout_constraintBottom_toBottomOf="@+id/noteEditText"
                app:layout_constraintEnd_toEndOf="@+id/noteEditText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>